# PSST

./: .gitignore  LICENSE  README.md  build_cuda_llama.bat  config.example.toml  pyproject.toml  requirements.txt  start_psst.bat
psst/: __init__.py  __main__.py  audio_cues.py  cleanup.py  config.py  hotkey.py  main.py  output.py  recorder.py  transcriber.py  tray.py  ui.py
tests/: test_psst.py
